--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Combination</title>
-        <link rel="stylesheet" href="Selector2.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
           <!-- Descendant selector -->
